# ICP_Analysis

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
include/data_loader/: DataLoader.h  PlyLoader.h  RgbdLoader.h  VertexLoader.h
include/data_types/: MatchList.h  PlyFile.h  VertexList.h
include/discard/: Discard.h  Prune.h  Reject.h  SurfaceNormalReject.h
include/error_metrics/: Helpers.h  PointToPlane.h  PointToPoint.h  Symmetric.h
include/matcher/: Matcher.h  NearestNeighborMatcher.h  ProjectiveMatcher.h
include/matching/: Matcher.h  NearestNeighborMatcher.h  ProjectiveMatcher.h
include/optimizing/: Helpers.h  LMOptimizer.h  LinearOptimizer.h  Optimizer.h
include/optimizing/linear/: PointToPlane.h  PointToPlaneLinear.h  PointToPoint.h  Symmetric.h  SymmetricLinear.h
include/sampler/: CopySampler.h  CovarianceSampler.h  RandomSampler.h  Sampler.h  UniformSampler.h
include/sampling/: CopySampler.h  CovarianceSampler.h  EmptySampler.h  RandomSampler.h  Sampler.h  UniformSampler.h
scripts/: download-3dscanrep.sh  download-fr1xyz.sh
src/: main.cpp
src/data_loader/: ply_loader.cpp  rgbd_loader.cpp
src/data_types/: vertex_list.cpp
src/discard/: reject.cpp  surface_normal_reject.cpp
src/matcher/: nearest_neighbor_matcher.cpp
src/optimizing/: linear_optimizer.cpp  lm_optimizer.cpp
src/optimizing/linear/: point_to_plane.cpp  point_to_plane_linear.cpp  point_to_point.cpp  symmetric.cpp  symmetric_linear.cpp
src/sampler/: copy_sampler.cpp  covariance_sampler.cpp  random_sampler.cpp  uniform_sampler.cpp
